<resources>
    <string name="app_name">TravelTix</string>

    <string-array name="stations">
        <item>Stasiun Gambir - Jakarta</item>
        <item>Stasiun Hall - Bandung</item>
        <item>Stasiun Tugu - Yogyakarta</item>
        <item>Stasiun Gubeng - Surabaya</item>
        <item>Stasiun Pasar Senen - Jakarta</item>
        <item>Stasiun Balapan - Solo</item>
        <item>Stasiun Tawang - Semarang</item>
        <item>Stasiun Purwokerto - Purwokwrto</item>
        <item>Stasiun Kejaksan - Cirebon</item>
        <item>Stasiun Madiun- Madiun</item>
        <item>Stasiun Kotabaru - Malang</item>
    </string-array>

    <integer name="initial_price">250000</integer>

    <integer-array name="distance_multiplier">
        <item>0</item>
        <item>2</item>
        <item>7</item>
        <item>10</item>
        <item>0</item>
        <item>8</item>
        <item>7</item>
        <item>5</item>
        <item>3</item>
        <item>9</item>
        <item>11</item>
    </integer-array>

    <string-array name="classes">
        <item>Ekonomi</item>
        <item>Bisnis</item>
        <item>Eksekutif</item>
        <item>Luxury</item>
    </string-array>

    <string-array name="facilities">
        <item>Food and drink</item>
        <item>Snack</item>
        <item>Pillow and blanket</item>
        <item>Entertainment</item>
        <item>Shuttle taxi</item>
        <item>Safe travel kit</item>
        <item>Travel insurance</item>
    </string-array>

    <string name="facility1">Food and drink</string>
    <string name="facility2">Snack</string>
    <string name="facility3">Pillow and blanket</string>
    <string name="facility4">Entertainment</string>
    <string name="facility5">Shuttle taxi</string>
    <string name="facility6">Safe travel kit</string>
    <string name="facility7">Travel insurance</string>
</resources>