<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdminInputActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Train name" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:padding="12dp"
        android:background="@drawable/bg_rect"
        android:maxLines="1"
        android:inputType="text"
        android:hint="Enter name" />

    <TextView
        android:id="@+id/txt_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:layout_marginTop="12dp"
        android:text="Origin" />

    <EditText
        android:id="@+id/time_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_origin"
        android:layout_marginEnd="12dp"
        android:padding="12dp"
        android:background="@drawable/bg_rect"
        android:focusable="false"
        android:hint=" -- : -- " />

    <Spinner
        android:id="@+id/spn_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_origin"
        android:layout_toEndOf="@id/time_origin"
        android:layout_alignParentEnd="true"
        android:paddingVertical="13dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/bg_rect"
        android:entries="@array/stations"/>

    <TextView
        android:id="@+id/txt_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_origin"
        android:layout_marginTop="12dp"
        android:text="Destination" />

    <EditText
        android:id="@+id/time_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_destination"
        android:layout_marginEnd="12dp"
        android:padding="12dp"
        android:background="@drawable/bg_rect"
        android:focusable="false"
        android:hint=" -- : -- " />

    <Spinner
        android:id="@+id/spn_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_destination"
        android:layout_toEndOf="@id/time_origin"
        android:layout_alignParentEnd="true"
        android:paddingVertical="12dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/bg_rect"
        android:entries="@array/stations"/>

    <TextView
        android:id="@+id/txt_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_destination"
        android:layout_marginTop="12dp"
        android:text="Class" />

    <Spinner
        android:id="@+id/spn_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_class"
        android:paddingVertical="12dp"
        android:paddingHorizontal="8dp"
        android:background="@drawable/bg_rect"
        android:entries="@array/classes"/>

    <TextView
        android:id="@+id/txt_facilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_class"
        android:layout_marginTop="12dp"
        android:text="Facilities" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txt_facilities">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ViewSwitcher
                android:id="@+id/card_facility1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_food" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card_selected">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_food" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility1" />

                </LinearLayout>

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/card_facility2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_snack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card_selected">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_snack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility2" />

                </LinearLayout>

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/card_facility3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_blanket" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card_selected">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_blanket" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility3" />

                </LinearLayout>

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/card_facility4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_tv" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card_selected">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_tv" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility4" />

                </LinearLayout>

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/card_facility5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_car" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card_selected">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_car" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility5" />

                </LinearLayout>

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/card_facility6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_kit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card_selected">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_kit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility6" />

                </LinearLayout>

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/card_facility7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:focusable="true"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_safe" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility7" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card_selected">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_safe" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facility7" />

                </LinearLayout>

            </ViewSwitcher>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_save"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="6dp"
        android:text="Total price" />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_save"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="6dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/on_body"
        android:text="Rp199.000" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:text="ADD ITEM" />

</RelativeLayout>